--- a/laptopData/laptopData cleaning.ipynb
+++ b/laptopData/laptopData cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "                                         ignore_errors = True)\n",
     "\n",
     "\n",
-    "\n",
+    "stare = laptop_data.columns\n",
     "data_cols: list[str] = laptop_data.columns\n",
     "\n",
     "data_cols[data_cols.index(\"Unnamed: 0\")] = \"OrderID\"\n",
@@ -42,63 +42,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dealing with missing values."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (1_303, 12)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Order_ID</th><th>Company</th><th>Type_Name</th><th>Inches</th><th>Screen_Resolution</th><th>Cpu</th><th>Ram</th><th>Memory</th><th>Gpu</th><th>Op_Sys</th><th>Weight</th><th>Price</th></tr><tr><td>i64</td><td>str</td><td>str</td><td>f64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>f64</td></tr></thead><tbody><tr><td>0</td><td>&quot;Apple&quot;</td><td>&quot;Ultrabook&quot;</td><td>13.3</td><td>&quot;IPS&nbsp;Panel&nbsp;Retina&nbsp;Display&nbsp;2560x…</td><td>&quot;Intel&nbsp;Core&nbsp;i5&nbsp;2.3GHz&quot;</td><td>&quot;8GB&quot;</td><td>&quot;128GB&nbsp;SSD&quot;</td><td>&quot;Intel&nbsp;Iris&nbsp;Plus&nbsp;Graphics&nbsp;640&quot;</td><td>&quot;macOS&quot;</td><td>&quot;1.37kg&quot;</td><td>71378.6832</td></tr><tr><td>1</td><td>&quot;Apple&quot;</td><td>&quot;Ultrabook&quot;</td><td>13.3</td><td>&quot;1440x900&quot;</td><td>&quot;Intel&nbsp;Core&nbsp;i5&nbsp;1.8GHz&quot;</td><td>&quot;8GB&quot;</td><td>&quot;128GB&nbsp;Flash&nbsp;Storage&quot;</td><td>&quot;Intel&nbsp;HD&nbsp;Graphics&nbsp;6000&quot;</td><td>&quot;macOS&quot;</td><td>&quot;1.34kg&quot;</td><td>47895.5232</td></tr><tr><td>2</td><td>&quot;HP&quot;</td><td>&quot;Notebook&quot;</td><td>15.6</td><td>&quot;Full&nbsp;HD&nbsp;1920x1080&quot;</td><td>&quot;Intel&nbsp;Core&nbsp;i5&nbsp;7200U&nbsp;2.5GHz&quot;</td><td>&quot;8GB&quot;</td><td>&quot;256GB&nbsp;SSD&quot;</td><td>&quot;Intel&nbsp;HD&nbsp;Graphics&nbsp;620&quot;</td><td>&quot;No&nbsp;OS&quot;</td><td>&quot;1.86kg&quot;</td><td>30636.0</td></tr><tr><td>3</td><td>&quot;Apple&quot;</td><td>&quot;Ultrabook&quot;</td><td>15.4</td><td>&quot;IPS&nbsp;Panel&nbsp;Retina&nbsp;Display&nbsp;2880x…</td><td>&quot;Intel&nbsp;Core&nbsp;i7&nbsp;2.7GHz&quot;</td><td>&quot;16GB&quot;</td><td>&quot;512GB&nbsp;SSD&quot;</td><td>&quot;AMD&nbsp;Radeon&nbsp;Pro&nbsp;455&quot;</td><td>&quot;macOS&quot;</td><td>&quot;1.83kg&quot;</td><td>135195.336</td></tr><tr><td>4</td><td>&quot;Apple&quot;</td><td>&quot;Ultrabook&quot;</td><td>13.3</td><td>&quot;IPS&nbsp;Panel&nbsp;Retina&nbsp;Display&nbsp;2560x…</td><td>&quot;Intel&nbsp;Core&nbsp;i5&nbsp;3.1GHz&quot;</td><td>&quot;8GB&quot;</td><td>&quot;256GB&nbsp;SSD&quot;</td><td>&quot;Intel&nbsp;Iris&nbsp;Plus&nbsp;Graphics&nbsp;650&quot;</td><td>&quot;macOS&quot;</td><td>&quot;1.37kg&quot;</td><td>96095.808</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>1298</td><td>&quot;Lenovo&quot;</td><td>&quot;2&nbsp;in&nbsp;1&nbsp;Convertible&quot;</td><td>14.0</td><td>&quot;IPS&nbsp;Panel&nbsp;Full&nbsp;HD&nbsp;/&nbsp;Touchscree…</td><td>&quot;Intel&nbsp;Core&nbsp;i7&nbsp;6500U&nbsp;2.5GHz&quot;</td><td>&quot;4GB&quot;</td><td>&quot;128GB&nbsp;SSD&quot;</td><td>&quot;Intel&nbsp;HD&nbsp;Graphics&nbsp;520&quot;</td><td>&quot;Windows&nbsp;10&quot;</td><td>&quot;1.8kg&quot;</td><td>33992.64</td></tr><tr><td>1299</td><td>&quot;Lenovo&quot;</td><td>&quot;2&nbsp;in&nbsp;1&nbsp;Convertible&quot;</td><td>13.3</td><td>&quot;IPS&nbsp;Panel&nbsp;Quad&nbsp;HD+&nbsp;/&nbsp;Touchscre…</td><td>&quot;Intel&nbsp;Core&nbsp;i7&nbsp;6500U&nbsp;2.5GHz&quot;</td><td>&quot;16GB&quot;</td><td>&quot;512GB&nbsp;SSD&quot;</td><td>&quot;Intel&nbsp;HD&nbsp;Graphics&nbsp;520&quot;</td><td>&quot;Windows&nbsp;10&quot;</td><td>&quot;1.3kg&quot;</td><td>79866.72</td></tr><tr><td>1300</td><td>&quot;Lenovo&quot;</td><td>&quot;Notebook&quot;</td><td>14.0</td><td>&quot;1366x768&quot;</td><td>&quot;Intel&nbsp;Celeron&nbsp;Dual&nbsp;Core&nbsp;N3050&nbsp;…</td><td>&quot;2GB&quot;</td><td>&quot;64GB&nbsp;Flash&nbsp;Storage&quot;</td><td>&quot;Intel&nbsp;HD&nbsp;Graphics&quot;</td><td>&quot;Windows&nbsp;10&quot;</td><td>&quot;1.5kg&quot;</td><td>12201.12</td></tr><tr><td>1301</td><td>&quot;HP&quot;</td><td>&quot;Notebook&quot;</td><td>15.6</td><td>&quot;1366x768&quot;</td><td>&quot;Intel&nbsp;Core&nbsp;i7&nbsp;6500U&nbsp;2.5GHz&quot;</td><td>&quot;6GB&quot;</td><td>&quot;1TB&nbsp;HDD&quot;</td><td>&quot;AMD&nbsp;Radeon&nbsp;R5&nbsp;M330&quot;</td><td>&quot;Windows&nbsp;10&quot;</td><td>&quot;2.19kg&quot;</td><td>40705.92</td></tr><tr><td>1302</td><td>&quot;Asus&quot;</td><td>&quot;Notebook&quot;</td><td>15.6</td><td>&quot;1366x768&quot;</td><td>&quot;Intel&nbsp;Celeron&nbsp;Dual&nbsp;Core&nbsp;N3050&nbsp;…</td><td>&quot;4GB&quot;</td><td>&quot;500GB&nbsp;HDD&quot;</td><td>&quot;Intel&nbsp;HD&nbsp;Graphics&quot;</td><td>&quot;Windows&nbsp;10&quot;</td><td>&quot;2.2kg&quot;</td><td>19660.32</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (1_303, 12)\n",
-       "┌──────────┬─────────┬──────────────┬────────┬───┬──────────────┬────────────┬────────┬────────────┐\n",
-       "│ Order_ID ┆ Company ┆ Type_Name    ┆ Inches ┆ … ┆ Gpu          ┆ Op_Sys     ┆ Weight ┆ Price      │\n",
-       "│ ---      ┆ ---     ┆ ---          ┆ ---    ┆   ┆ ---          ┆ ---        ┆ ---    ┆ ---        │\n",
-       "│ i64      ┆ str     ┆ str          ┆ f64    ┆   ┆ str          ┆ str        ┆ str    ┆ f64        │\n",
-       "╞══════════╪═════════╪══════════════╪════════╪═══╪══════════════╪════════════╪════════╪════════════╡\n",
-       "│ 0        ┆ Apple   ┆ Ultrabook    ┆ 13.3   ┆ … ┆ Intel Iris   ┆ macOS      ┆ 1.37kg ┆ 71378.6832 │\n",
-       "│          ┆         ┆              ┆        ┆   ┆ Plus         ┆            ┆        ┆            │\n",
-       "│          ┆         ┆              ┆        ┆   ┆ Graphics 640 ┆            ┆        ┆            │\n",
-       "│ 1        ┆ Apple   ┆ Ultrabook    ┆ 13.3   ┆ … ┆ Intel HD     ┆ macOS      ┆ 1.34kg ┆ 47895.5232 │\n",
-       "│          ┆         ┆              ┆        ┆   ┆ Graphics     ┆            ┆        ┆            │\n",
-       "│          ┆         ┆              ┆        ┆   ┆ 6000         ┆            ┆        ┆            │\n",
-       "│ 2        ┆ HP      ┆ Notebook     ┆ 15.6   ┆ … ┆ Intel HD     ┆ No OS      ┆ 1.86kg ┆ 30636.0    │\n",
-       "│          ┆         ┆              ┆        ┆   ┆ Graphics 620 ┆            ┆        ┆            │\n",
-       "│ 3        ┆ Apple   ┆ Ultrabook    ┆ 15.4   ┆ … ┆ AMD Radeon   ┆ macOS      ┆ 1.83kg ┆ 135195.336 │\n",
-       "│          ┆         ┆              ┆        ┆   ┆ Pro 455      ┆            ┆        ┆            │\n",
-       "│ 4        ┆ Apple   ┆ Ultrabook    ┆ 13.3   ┆ … ┆ Intel Iris   ┆ macOS      ┆ 1.37kg ┆ 96095.808  │\n",
-       "│          ┆         ┆              ┆        ┆   ┆ Plus         ┆            ┆        ┆            │\n",
-       "│          ┆         ┆              ┆        ┆   ┆ Graphics 650 ┆            ┆        ┆            │\n",
-       "│ …        ┆ …       ┆ …            ┆ …      ┆ … ┆ …            ┆ …          ┆ …      ┆ …          │\n",
-       "│ 1298     ┆ Lenovo  ┆ 2 in 1       ┆ 14.0   ┆ … ┆ Intel HD     ┆ Windows 10 ┆ 1.8kg  ┆ 33992.64   │\n",
-       "│          ┆         ┆ Convertible  ┆        ┆   ┆ Graphics 520 ┆            ┆        ┆            │\n",
-       "│ 1299     ┆ Lenovo  ┆ 2 in 1       ┆ 13.3   ┆ … ┆ Intel HD     ┆ Windows 10 ┆ 1.3kg  ┆ 79866.72   │\n",
-       "│          ┆         ┆ Convertible  ┆        ┆   ┆ Graphics 520 ┆            ┆        ┆            │\n",
-       "│ 1300     ┆ Lenovo  ┆ Notebook     ┆ 14.0   ┆ … ┆ Intel HD     ┆ Windows 10 ┆ 1.5kg  ┆ 12201.12   │\n",
-       "│          ┆         ┆              ┆        ┆   ┆ Graphics     ┆            ┆        ┆            │\n",
-       "│ 1301     ┆ HP      ┆ Notebook     ┆ 15.6   ┆ … ┆ AMD Radeon   ┆ Windows 10 ┆ 2.19kg ┆ 40705.92   │\n",
-       "│          ┆         ┆              ┆        ┆   ┆ R5 M330      ┆            ┆        ┆            │\n",
-       "│ 1302     ┆ Asus    ┆ Notebook     ┆ 15.6   ┆ … ┆ Intel HD     ┆ Windows 10 ┆ 2.2kg  ┆ 19660.32   │\n",
-       "│          ┆         ┆              ┆        ┆   ┆ Graphics     ┆            ┆        ┆            │\n",
-       "└──────────┴─────────┴──────────────┴────────┴───┴──────────────┴────────────┴────────┴────────────┘"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns with missing values before dropping null values:\n",
+      "[('Order_ID', 30), ('Company', 30), ('Type_Name', 30), ('Inches', 31), ('Screen_Resolution', 30), ('Cpu', 30), ('Ram', 30), ('Memory', 30), ('Gpu', 30), ('Op_Sys', 30), ('Weight', 30), ('Price', 30)]\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "laptop_data"
+    "def null_values_count(df:pl.DataFrame) -> list[str]:\n",
+    "    '''For each column of the dataframe, tell me the number of missing values.\n",
+    "    Return the list of columns with missing values.\n",
+    "    '''\n",
+    "\n",
+    "    null_columns:list[str] = []\n",
+    "\n",
+    "    for col in df.columns: # #Iterate over the columns\n",
+    "        n_nulls: int = df[col].null_count()\n",
+    "\n",
+    "        if n_nulls > 0:\n",
+    "            null_columns.append((col, n_nulls))\n",
+    "\n",
+    "\n",
+    "    return null_columns\n",
+    "\n",
+    "\n",
+    "def null_value_displayer(df:pl.DataFrame, when: str = \"before\") -> None:\n",
+    "    null_columns = null_values_count(df)\n",
+    "\n",
+    "    if null_columns: # If there are any null-valued column, display all of them.\n",
+    "        print(f\"Columns with missing values {when} dropping null values:\")\n",
+    "        print(null_columns)\n",
+    "        print('\\n')\n",
+    "\n",
+    "\n",
+    "\n",
+    "def drop_missing_values(df:pl.DataFrame) -> pl.DataFrame:\n",
+    "    \"\"\"Drop the missing rows (that is - rows with all columns missing).\n",
+    "    Moreover, for each column find the number of missing values.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    null_value_displayer(df)\n",
+    "\n",
+    "    df_dropped = df.drop_nulls()\n",
+    "    \n",
+    "    null_value_displayer(df_dropped, \"after\")\n",
+    "\n",
+    "    return df_dropped\n",
+    "\n",
+    "  \n",
+    "    \n",
+    "\n",
+    "laptop_data = drop_missing_values(laptop_data)\n"
    ]
   }
  ],
