I've imputed the rows having less missing values, and I've added a new row-index column.

--- a/laptopData/laptopData cleaning.ipynb
+++ b/laptopData/laptopData cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,13 +28,13 @@
     "    return reformatted_name\n",
     "\n",
     "laptop_data : pl.DataFrame = pl.read_csv(source = \"laptopData.csv\", # Read the data by brute force.\n",
-    "                                         ignore_errors = True)\n",
+    "                                         ignore_errors = True,\n",
+    "                                         null_values = [\"?\"])\n",
     "\n",
     "\n",
-    "stare = laptop_data.columns\n",
     "data_cols: list[str] = laptop_data.columns\n",
     "\n",
-    "data_cols[data_cols.index(\"Unnamed: 0\")] = \"OrderID\"\n",
+    "data_cols[data_cols.index(\"Unnamed: 0\")] = \"ID\"\n",
     "\n",
     "laptop_data.columns = np.vectorize(reformat_column_names)(data_cols)\n",
     "\n",
@@ -50,17 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns with missing values before dropping null values:\n",
-      "[('Order_ID', 30), ('Company', 30), ('Type_Name', 30), ('Inches', 31), ('Screen_Resolution', 30), ('Cpu', 30), ('Ram', 30), ('Memory', 30), ('Gpu', 30), ('Op_Sys', 30), ('Weight', 30), ('Price', 30)]\n",
-      "\n",
-      "\n"
+      "['Inches', 'Memory', 'Weight']\n",
+      "[Float64, String, Float64]\n"
      ]
     }
    ],
@@ -76,19 +74,12 @@
     "        n_nulls: int = df[col].null_count()\n",
     "\n",
     "        if n_nulls > 0:\n",
-    "            null_columns.append((col, n_nulls))\n",
+    "            null_columns.append(col)\n",
     "\n",
     "\n",
     "    return null_columns\n",
     "\n",
     "\n",
-    "def null_value_displayer(df:pl.DataFrame, when: str = \"before\") -> None:\n",
-    "    null_columns = null_values_count(df)\n",
-    "\n",
-    "    if null_columns: # If there are any null-valued column, display all of them.\n",
-    "        print(f\"Columns with missing values {when} dropping null values:\")\n",
-    "        print(null_columns)\n",
-    "        print('\\n')\n",
     "\n",
     "\n",
     "\n",
@@ -97,18 +88,74 @@
     "    Moreover, for each column find the number of missing values.\n",
     "    \"\"\"\n",
     "\n",
-    "    null_value_displayer(df)\n",
+    "    df_dropped = df.filter(~pl.all_horizontal(pl.all().is_null()))\n",
     "\n",
-    "    df_dropped = df.drop_nulls()\n",
+    "    null_columns = null_values_count(df_dropped)\n",
     "    \n",
-    "    null_value_displayer(df_dropped, \"after\")\n",
-    "\n",
-    "    return df_dropped\n",
-    "\n",
+    "  \n",
+    "    return df_dropped, null_columns\n",
     "  \n",
     "    \n",
     "\n",
-    "laptop_data = drop_missing_values(laptop_data)\n"
+    "laptop_data, null_columns = drop_missing_values(laptop_data)\n",
+    "dtypes: list[ pl.DataType] = [pl.Float64(), pl.String(), pl.Float64()]\n",
+    "\n",
+    "print(null_columns)\n",
+    "print(dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dealing with rows having less missing values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 455,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def impute_missing_values(df:pl.DataFrame, null_cols: list[str], dtypes:list[pl.DataType]) -> pl.DataFrame:\n",
+    "    for id, col_name in enumerate(null_cols):\n",
+    "        col:pl.Series = laptop_data[col_name]\n",
+    "\n",
+    "        if  not col.dtype.is_numeric():\n",
+    "            imputed_col: pl.Series = laptop_data[col_name].str.replace(r\"kg\", \"\")\n",
+    "          \n",
+    "            if dtypes[id] == pl.String():\n",
+    "                imputed_col: pl.Series = imputed_col.fill_null(strategy = \"backward\")\n",
+    "            else:\n",
+    "                imputed_col: pl.Series = imputed_col.cast(dtypes[id]).fill_null(strategy = \"mean\")\n",
+    "\n",
+    "        else:\n",
+    "            imputed_col: pl.Series = laptop_data[col_name].cast(dtypes[id]).fill_null(strategy = \"mean\")\n",
+    "\n",
+    "        df = df.with_columns(imputed_col)\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "            \n",
+    "\n",
+    "laptop_data:pl.DataFrame = impute_missing_values(laptop_data, null_columns, dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Replacing the row index column with a new identification column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 456,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "laptop_data = laptop_data.drop(\"ID\").with_row_index(name = \"ID\")"
    ]
   }
  ],
